<resources>
    <string name="app_name">Lanchonete PDV</string>
    <string name="title_activity_venda">VendaActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_activity_venda_confirm">VendaConfirmActivity</string>
    <string name="confirmvenda">Confirmar Venda</string>
    <string name="venda">Venda</string>
    <string name="detalhesvenda">Detalhes Venda</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="detalhes">Detalhes</string>
    <string name="title_activity_grupo_pro_cad">GrupoProCadActivity</string>
    <string name="nome">Nome</string>
    <string name="deletar">Deletar</string>
    <string name="salvar">Salvar</string>
    <string name="status">Status</string>
    <string name="cadastros">Cadastros</string>
    <string name="relatorios">Relatorios</string>
    <string name="configuracoes">Configurações</string>
    <string name="mapamesas">Mapa de Mesas</string>
    <string name="grupodepro">Grupo de Produto</string>
    <string name="grupodeing">Grupo de Ingrediente</string>
    <string name="grupodeobs">Grupo de Observação</string>
    <string name="produto">Produto</string>
    <string name="ingrediente">Ingrediente</string>
    <string name="observacao">Observação</string>
    <string name="cadastrode">Cadastro de</string>
    <string name="estado">Estado</string>
    <string name="sigla">Sigla</string>
    <string name="cidade">Cidade</string>
    <string name="mesa">Mesa</string>
    <string name="cliente">Cliente</string>
    <string name="email">Email</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="rua">Rua</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="preco">Preço</string>
    <string name="imprime">Imprime</string>
    <string name="grupos">Grupos</string>
    <string name="produtos">Produtos</string>
    <string name="contasrec">Contas a Receber</string>
    <string name="valor">Valor</string>
    <string name="subtotal">Subtotal</string>
    <string name="desconto">Desconto</string>
    <string name="receber">Receber</string>
    <string name="total">Total</string>
    <string name="moeda">Moeda</string>
    <string name="troco">Troco</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="cartao">Cartão</string>
    <string name="limpar">Limpar</string>
    <string name="exato">Exato</string>
    <string name="recebimento">Recebimento</string>
    <string name="valorinsuficiente">Valor do recebimento é insuficiente!</string>
    <string name="credito">Crédito</string>
    <string name="debito">Débito</string>
    <string name="caixa">Caixa</string>
    <string name="abertura">Abertura</string>
    <string name="saldo">Saldo</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>
    <string name="possuimesasabertas">Você possui mesas abertas!</string>
    <string name="naopossuicaixaaberto">Não possui caixa aberto!</string>
    <string name="caixaaberto">Caixa foi aberto!</string>
    <string name="caixafechado">Caixa foi fechado</string>
    <string name="prazo">A Prazo</string>
    <string name="selecionecli">Selecione um cliente</string>
    <string name="digiteumvalorvalido">Digite um valor valido</string>
</resources>