<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNomeCli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmailCli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etCpfCli"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:hint="@string/cpf"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etTelefoneCli"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etRuaCli"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/rua"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etNumeroCli"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/numero"
            android:inputType="textPersonName" />
    </LinearLayout>

    <EditText
        android:id="@+id/etBairroCli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bairro"
        android:inputType="textPersonName" />

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spEstCliCad"
            android:layout_width="150dp"
            android:layout_height="40dp" />

        <Spinner
            android:id="@+id/spCidCliCad"
            android:layout_width="230dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <Switch
        android:id="@+id/swtStatusCli"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="3dp"
        android:text="@string/status" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:weightSum="1"
        android:layout_below="@+id/relativeLayout2"
        android:id="@+id/linearLayout14"
        android:gravity="center|center_vertical"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btCancelarCliCad"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_click_rev"
                android:layout_margin="1dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deletar"
                android:id="@+id/btDelCliCad"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_click_rev"
                android:layout_margin="1dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.34">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:id="@+id/btSaveCliCad"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_click_rev"
                android:layout_margin="1dp"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>