<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNomePro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPrecoPro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preco"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spGruProCad"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Switch
        android:id="@+id/swtImprimepro"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="3dp"
        android:text="@string/imprime" />

    <Switch
        android:id="@+id/swtStatusPro"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="3dp"
        android:text="@string/status" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:weightSum="1"
        android:layout_below="@+id/relativeLayout2"
        android:id="@+id/linearLayout15"
        android:gravity="center|center_vertical"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingrediente"
                android:id="@+id/btProGruIng"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_click_rev"
                android:layout_margin="1dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/observacao"
                android:id="@+id/btProGruObs"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_click_rev"
                android:layout_margin="1dp"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:weightSum="1"
        android:layout_below="@+id/relativeLayout2"
        android:id="@+id/linearLayout14"
        android:gravity="center|center_vertical"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btCancelarProCad"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_click_rev"
                android:layout_margin="1dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33">

            <Button
                android:id="@+id/btDelProCad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/button_click_rev"
                android:text="@string/deletar"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.34">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:id="@+id/btSaveProCad"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_click_rev"
                android:layout_margin="1dp"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>