<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etDlgGenCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nome"/>

    <EditText
        android:id="@+id/etDlgGenCad2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spDlgGenCad"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Switch
        android:id="@+id/swtDlgGenCad"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="3dp"
        android:text="@string/status" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:weightSum="1"
        android:layout_below="@+id/relativeLayout2"
        android:id="@+id/linearLayout14"
        android:gravity="center|center_vertical"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btCancelarDlgCad"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_click_rev"
                android:layout_margin="1dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deletar"
                android:id="@+id/btDelDlgCad"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_click_rev"
                android:layout_margin="1dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.34">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:id="@+id/btSaveDlgCad"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_click_rev"
                android:layout_margin="1dp"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>